--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "mongoose-aggregate-paginate-v2": "^1.1.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^1.4.5-lts.1"
   }
 }
